--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,9 +6,12 @@ jobs:
   build:
     runs-on: [self-hosted, linux, RISCV64]
     steps:
-      - name: Run a one-line script
-        run: mkdir -p /opt && cd /opt && git clone https://github.com/Sh4d1/aozig.git && cd aozig
+      - name: Clone the repo
+        run: git clone https://github.com/Sh4d1/aozig.git
           
-      - name: test
-        run: echo $pwd         
+      - name: Install zig
+        run: mkdir zig && wget https://ziglang.org/builds/zig-linux-riscv64-0.12.0-dev.2341+92211135f.tar.xz && tar xzf zig-linux-riscv64-0.12.0-dev.2341+92211135f.tar.xz -C zig
+
+      - name: Print
+        run: echo $pwd ; ls -la
       
