--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ jobs:
         run: git clone https://github.com/Sh4d1/aozig.git
           
       - name: Install zig
-        run: mkdir zig && wget https://ziglang.org/builds/zig-linux-riscv64-0.12.0-dev.2341+92211135f.tar.xz && tar xzf zig-linux-riscv64-0.12.0-dev.2341+92211135f.tar.xz -C zig
+        run: mkdir zig && wget https://ziglang.org/builds/zig-linux-riscv64-0.12.0-dev.2341+92211135f.tar.xz && tar xf zig-linux-riscv64-0.12.0-dev.2341+92211135f.tar.xz -C zig
 
       - name: Print
         run: echo $pwd ; ls -la
