--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,8 +10,8 @@ jobs:
         run: git clone https://github.com/Sh4d1/aozig.git || git -C aozig pull origin
           
       - name: Install zig
-        run: mkdir zig && mkdir -p bin && curl -fsSL https://ziglang.org/builds/zig-linux-riscv64-0.12.0-dev.2341+92211135f.tar.xz -o /tmp/zig.tar.xz && tar xf /tmp/zig.tar.xz -C /tmp && cp /tmp/zig-linux-riscv64-0.12.0-dev.2341+92211135f/zig /usr/bin/zig || true
+        run: mkdir zig && mkdir -p bin && curl -fsSL https://ziglang.org/builds/zig-linux-riscv64-0.12.0-dev.2341+92211135f.tar.xz -o /tmp/zig.tar.xz && tar xf /tmp/zig.tar.xz -C /tmp && cp /tmp/zig-linux-riscv64-0.12.0-dev.2341+92211135f/zig bin/zig || true
 
       - name: Bench
-        run: cd aozig ; zig build run -- bench
+        run: cd aozig ; ../bin/zig build run -- bench
       
