--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,4 +13,4 @@ jobs:
         run: mkdir zig && curl -fsSL https://ziglang.org/builds/zig-linux-riscv64-0.12.0-dev.2341+92211135f.tar.xz -o /tmp/zig.tar.xz && tar xf /tmp/zig.tar.xz -C /tmp && cp -r /tmp/zig-linux-riscv64-0.12.0-dev.2341+92211135f/* zig/ || true
 
       - name: Bench
-        run: cat /etc/os-release ; echo ; cd aozig ; ../zig/zig build run -Doptimize=ReleaseFast -- bench
+        run: uname -a ; head -n 1 /etc/os-release ; echo ; cd aozig ; ../zig/zig build run -Doptimize=ReleaseFast -- bench
